--- a/stargazer/stargazer/Info.plist
+++ b/stargazer/stargazer/Info.plist
@@ -62,5 +62,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>base_url</key>
+	<string>https://api.github.com</string>
 </dict>
 </plist>
